# Butterscotch-C

./: .gitignore  CMakeLists.txt  README.md  setup.ps1  setup.sh
cmake/: copy_runtime_deps.cmake
include/bs/: app.h  common.h
include/bs/builtin/: builtin_registry.h
include/bs/data/: form_reader.h
include/bs/platform/: sdl_frontend.h
include/bs/runtime/: game_runner.h
include/bs/vm/: vm.h
src/: app.c  main.c  main_sdl.c
src/builtin/: builtin_registry.c
src/data/: form_reader.c
src/platform/: sdl_frontend.c
src/runtime/: game_runner.c
src/vm/: vm.c
